--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -17,7 +17,7 @@ type: 'php:7.2'
 relationships:
     database: 'mysqldb:mysql'
 ## Uncomment this line to enable Redis caching for Drupal.
-#    redis: 'rediscache:redis'
+    redis: 'rediscache:redis'
 
 # Add additional PHP extensions.
 runtime:
