--- a/web/composer.json
+++ b/web/composer.json
@@ -111,7 +111,7 @@
         "drupal/media_entity_browser": "^2.0",
         "drupal/bootstrap_simple_carousel": "^1.2",
         "drupal/block_field": "^1.0@alpha",
-        "drush/drush": "^9.7"
+        "drupal/metatag": "^1.8"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
