--- a/web/composer.json
+++ b/web/composer.json
@@ -111,7 +111,8 @@
         "drupal/media_entity_browser": "^2.0",
         "drupal/bootstrap_simple_carousel": "^1.2",
         "drupal/block_field": "^1.0@alpha",
-        "drupal/metatag": "^1.8"
+        "drupal/metatag": "^1.8",
+        "commerceguys/addressing": "^1.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
