Redeploy to Platform 13

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -49,7 +49,7 @@ hooks:
         set -e
         php ./drush/platformsh_generate_drush_yml.php
         cd web
-        build
+        composer install
         drush -y cache-rebuild
         drush -y updatedb
         drush -y config-import
