--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -42,14 +42,18 @@ mounts:
 build:
     flavor: composer
 
+
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
+    build:
+        cd web
+        composer install
+
     # The deploy hook runs after your application has been deployed and started.
     deploy: |
         set -e
         php ./drush/platformsh_generate_drush_yml.php
         cd web
-        composer install
         drush -y cache-rebuild
         drush -y updatedb
         drush -y config-import
