Redeploy to Platform 15

--- a/web/composer.json
+++ b/web/composer.json
@@ -131,7 +131,8 @@
         ],
         "merge-plugin": {
             "include": [
-                "core/composer.json"
+                "core/composer.json",
+                "web/composer.json"
             ],
             "recurse": true,
             "replace": false,
