Redeploy to Platform 19 - set up php.ini

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -117,3 +117,8 @@ crons:
     drupal:
         spec: '*/20 * * * *'
         cmd: 'cd web ; drush core-cron'
+
+# Setting for php.ini
+variables:
+    php:
+        memory_limit: 256M
