--- a/config/sync/core.entity_view_display.node.publication.highlight.yml
+++ b/config/sync/core.entity_view_display.node.publication.highlight.yml
@@ -15,22 +15,20 @@ dependencies:
     - field.field.node.publication.field_publication_type
     - field.field.node.publication.field_theme
     - node.type.publication
+    - responsive_image.styles.narrow
   module:
     - datetime
     - ds
-    - entity_reference_revisions
     - field_group
-    - image
-    - link
-    - options
-    - text
+    - responsive_image
+    - smart_trim
     - user
 third_party_settings:
   field_group:
     group_download:
       children: {  }
       parent_name: ''
-      weight: 5
+      weight: 18
       label: 'Download free copy'
       format_settings:
         formatter: collapsible
@@ -46,9 +44,31 @@ third_party_settings:
         required_fields: true
       format_type: tab
       region: hidden
+    group_content:
+      children:
+        - field_publication_type
+        - node_title
+        - field_publication_date
+        - body
+        - node_link
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: card-body
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Content
+      region: hidden
   ds:
     layout:
-      id: bs_2col_stacked
+      id: bs_1col
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -60,45 +80,42 @@ third_party_settings:
           add_layout_class: 1
           attributes: ''
         regions:
-          top:
-            wrapper: div
-            classes:
-              col-sm-12: col-sm-12
-            add_region_classes: 1
-            attributes: ''
-          left:
-            wrapper: div
-            classes:
-              col-sm-6: col-sm-6
-            add_region_classes: 1
-            attributes: ''
-          right:
-            wrapper: div
-            classes:
-              col-sm-6: col-sm-6
-            add_region_classes: 1
-            attributes: ''
-          bottom:
+          main:
             wrapper: div
             classes:
               col-sm-12: col-sm-12
             add_region_classes: 1
             attributes: ''
     regions:
-      top:
-        - field_contact_ipu
-        - body
-        - field_publication_date
-        - field_publication_document
-        - field_publication_format
-        - langcode
-        - field_ipu_structure
+      main:
         - field_media_image
-        - field_country
+        - group_content
         - field_publication_type
-        - field_theme
-        - comment_node_publication
-        - links
+        - node_title
+        - field_publication_date
+        - body
+        - node_link
+    fields:
+      node_link:
+        plugin_id: node_link
+        weight: 18
+        label: hidden
+        formatter: default
+      node_title:
+        plugin_id: node_title
+        weight: 14
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.publication.highlight
 targetEntityType: node
 bundle: publication
@@ -106,101 +123,76 @@ mode: highlight
 content:
   body:
     label: hidden
-    weight: 1
-    type: text_default
-    settings: {  }
-    third_party_settings: {  }
-    region: top
-  field_contact_ipu:
-    label: hidden
-    weight: 0
-    type: link
+    weight: 16
+    type: smart_trim
     settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    region: top
-  field_country:
-    type: entity_reference_label
-    weight: 9
-    region: top
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-  field_ipu_structure:
-    type: entity_reference_label
-    weight: 7
-    region: top
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
+      trim_length: 40
+      trim_type: words
+      trim_suffix: ''
+      wrap_class: trimmed
+      more_text: More
+      more_class: more-link
+      summary_handler: full
+      trim_options:
+        text: true
+        trim_zero: false
+      wrap_output: false
+      more_link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    region: main
   field_media_image:
-    type: image
-    weight: 8
-    region: top
-    label: above
+    type: responsive_image
+    weight: 0
+    region: main
+    label: hidden
     settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
+      responsive_image_style: narrow
+      image_link: content
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_publication_date:
-    label: inline
-    weight: 2
+    label: hidden
+    weight: 15
     type: datetime_default
     settings:
       format_type: medium
       timezone_override: ''
     third_party_settings: {  }
-    region: top
-  field_publication_document:
-    type: entity_reference_revisions_entity_view
-    weight: 3
-    region: top
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-  field_publication_format:
-    label: inline
-    weight: 4
-    type: list_default
-    settings: {  }
-    third_party_settings: {  }
-    region: top
+    region: main
   field_publication_type:
     type: entity_reference_label
-    weight: 10
-    region: top
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-  field_theme:
-    type: entity_reference_label
-    weight: 11
-    region: top
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-  langcode:
-    type: language
-    weight: 6
-    region: top
-    label: above
-    settings:
-      link_to_entity: false
-      native_language: false
-    third_party_settings: {  }
-  links:
     weight: 13
-    region: top
-    settings: {  }
-    third_party_settings: {  }
-hidden: {  }
+    region: main
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+hidden:
+  field_contact_ipu: true
+  field_country: true
+  field_ipu_structure: true
+  field_publication_document: true
+  field_publication_format: true
+  field_theme: true
+  langcode: true
+  links: true
