--- a/composer.json
+++ b/composer.json
@@ -21,123 +21,124 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
-        "drupal/console": "^1.0.2",
-        "drupal/core": "8.6.17",
-        "drupal/paragraphs_preview_helper": "^1.1",
-        "drupal/redis": "^1.1",
-        "drush/drush": "^9.7",
-        "platformsh/config-reader": "^2.2",
-        "vlucas/phpdotenv": "^2.4",
-        "webflo/drupal-finder": "^1.0.0",
-        "webmozart/path-util": "^2.3",
-        "wikimedia/composer-merge-plugin": "^1.4",
-        "zaporylie/composer-drupal-optimizations": "^1.0",
-		"drupal/token": "^1.5",
-        "drupal/adminimal_theme": "^1.5",
-        "drupal/adminimal_admin_toolbar": "^1.9",
-        "drupal/config_split": "^1.4",
-        "drupal/admin_toolbar_content_languages": "^1.0@beta",
-        "drupal/ctools": "^3.2",
-        "drupal/file_mdm": "^1.1",
-        "drupal/imagemagick": "^2.4",
-        "drupal/migrate_plus": "^4.1",
-        "drupal/migrate_upgrade": "^3.0",
-        "drupal/module_filter": "^3.1",
-        "drupal/pathauto": "^1.4",
-        "drupal/redirect": "^1.3",
-        "drupal/stage_file_proxy": "^1.0@beta",
-        "drupal/bootstrap_barrio": "^4.22",
-        "drupal/bootstrap_sass": "^1.9",
-        "drupal/migrate_tools": "^4.1",
-        "drupal/migrate_manifest": "^1.8",
         "drupal/address": "^1.6",
+        "drupal/admin_toolbar": "^1.26",
+        "drupal/admin_toolbar_content_languages": "^1.0@beta",
+        "drupal/adminimal_admin_toolbar": "^1.9",
+        "drupal/adminimal_theme": "^1.5",
         "drupal/back_to_top": "^1.0",
+        "drupal/backup_migrate": "^4.0",
+        "drupal/better_exposed_filters": "^3.0@alpha",
         "drupal/block_class": "^1.0",
+        "drupal/block_field": "^1.0@alpha",
         "drupal/blockgroup": "^1.1",
+        "drupal/bootstrap_barrio": "^4.22",
+        "drupal/bootstrap_layouts": "^5.1",
+        "drupal/bootstrap_sass": "^1.9",
+        "drupal/bootstrap_simple_carousel": "^1.2",
         "drupal/chosen": "^2.7",
         "drupal/coffee": "^1.0@beta",
+        "drupal/colorbox": "^1.4",
+        "drupal/components": "^1.1",
+        "drupal/config_split": "^1.4",
+        "drupal/console": "^1.0.2",
+        "drupal/context_active_trail": "^1.0@RC",
+        "drupal/convert_bundles": "^1.0@alpha",
+        "drupal/convert_media_tags_to_markup": "^1.0@beta",
+        "drupal/core": "^8.7",
+        "drupal/csv_serialization": "^1.4",
+        "drupal/ctools": "^3.2",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/date_all_day": "^1.0@beta",
         "drupal/date_popup": "^1.0",
+        "drupal/datetime_extras": "^1.0@alpha",
         "drupal/ds": "^3.3",
+        "drupal/entity_embed": "^1.0@beta",
+        "drupal/entity_reference_revisions": "^1.6",
         "drupal/entityqueue": "^1.0@beta",
         "drupal/facets": "^1.3",
         "drupal/features": "^3.8",
         "drupal/feeds": "^3.0@alpha",
         "drupal/field_collection": "^1.0@alpha",
         "drupal/field_group": "^3.0",
+        "drupal/file_browser": "^1.1",
         "drupal/file_entity": "^2.0@beta",
+        "drupal/file_mdm": "^1.1",
         "drupal/filefield_paths": "^1.0@beta",
         "drupal/flickr": "^1.0@alpha",
         "drupal/flickr_block": "^1.0@alpha",
+        "drupal/flickr_colorbox": "^1.0@alpha",
         "drupal/geocoder": "^2.1",
         "drupal/geofield": "^1.3",
+        "drupal/geolocation": "^1.11",
         "drupal/geophp": "^1.0@beta",
         "drupal/google_analytics": "^3.0",
+        "drupal/imagemagick": "^2.4",
+        "drupal/inline_entity_form": "^1.0@RC",
         "drupal/job_scheduler": "^2.0@alpha",
+        "drupal/lang_dropdown": "^2.0@beta",
         "drupal/languagefield": "^1.5",
         "drupal/mailchimp": "^1.8",
         "drupal/mailchimp_campaign": "^1.8",
         "drupal/mailchimp_lists": "^1.8",
         "drupal/mailchimp_signup": "^1.8",
+        "drupal/media_entity_browser": "^2.0",
         "drupal/menu_admin_per_menu": "^1.0",
         "drupal/menu_block": "^1.5",
+        "drupal/menu_link_attributes": "^1.0",
         "drupal/metatag_twitter_cards": "^1.8",
         "drupal/metatag_verification": "^1.8",
         "drupal/metatag_views": "^1.8",
+        "drupal/migrate_manifest": "^1.8",
+        "drupal/migrate_plus": "^4.1",
+        "drupal/migrate_tools": "^4.1",
+        "drupal/migrate_upgrade": "^3.0",
+        "drupal/module_filter": "^3.1",
+        "drupal/module_missing_message_fixer": "^1.0",
         "drupal/override_node_options": "^2.4",
+        "drupal/paragraphs": "^1.8",
+        "drupal/paragraphs_preview_helper": "^1.1",
+        "drupal/pathauto": "^1.4",
         "drupal/pathologic": "^1.0@alpha",
+        "drupal/radix": "4.x-dev",
+        "drupal/redirect": "^1.3",
+        "drupal/redis": "^1.1",
         "drupal/roleassign": "^1.0@alpha",
         "drupal/search_api": "^1.12",
         "drupal/search_api_db": "^1.12",
         "drupal/search_api_page": "^1.0@alpha",
         "drupal/search_api_solr": "^2.7",
         "drupal/search_api_sorts": "^1.0@beta",
+        "drupal/shield": "^1.2",
         "drupal/site_status_message": "^1.0@RC",
         "drupal/sitemap": "^1.5",
+        "drupal/smart_trim": "^1.1",
+        "drupal/stage_file_proxy": "^1.0@beta",
+        "drupal/taxonomy_manager": "^1.0@alpha",
         "drupal/taxonomy_menu": "^3.4",
         "drupal/text_resize": "^1.1",
+        "drupal/token": "^1.5",
         "drupal/twitter_block": "^2.1",
+        "drupal/ultimenu": "^2.0",
         "drupal/viewfield": "^3.0@alpha",
+        "drupal/views_bootstrap": "^4.1",
         "drupal/views_bulk_operations": "^2.5",
+        "drupal/views_data_export": "^1.0@beta",
+        "drupal/views_fieldsets": "^3.3",
+        "drupal/views_menu_children_filter": "^1.0@beta",
         "drupal/webform": "^5.2",
         "drupal/xmlsitemap": "^1.0@alpha",
-        "drupal/colorbox": "^1.4",
-        "drupal/flickr_colorbox": "^1.0@alpha",
-        "drupal/backup_migrate": "^4.0",
-        "drupal/shield": "^1.2",
-        "drupal/entity_reference_revisions": "^1.6",
-        "drupal/entity_embed": "^1.0@beta",
-        "drupal/file_browser": "^1.1",
-        "drupal/convert_media_tags_to_markup": "^1.0@beta",
-        "drupal/paragraphs": "^1.8",
-        "drupal/geolocation": "^1.11",
-        "drupal/inline_entity_form": "^1.0@RC",
-        "drupal/taxonomy_manager": "^1.0@alpha",
-        "drupal/bootstrap_layouts": "^5.1",
-        "drupal/components": "^1.1",
-        "drupal/ultimenu": "^2.0",
-        "drupal/csv_serialization": "^1.4",
-        "drupal/views_bootstrap": "^4.1",
-        "drupal/radix": "4.x-dev",
-        "drupal/views_data_export": "^1.0@beta",
-        "drupal/views_menu_children_filter": "^1.0@beta",
-        "drupal/views_fieldsets": "^3.3",
-        "drupal/menu_link_attributes": "^1.0",
-        "drupal/smart_trim": "^1.1",
-        "drupal/better_exposed_filters": "^3.0@alpha",
-        "drupal/context_active_trail": "^1.0@RC",
-        "drupal/admin_toolbar": "^1.26",
-        "drupal/lang_dropdown": "^2.0@beta",
-        "drupal/module_missing_message_fixer": "^1.0",
-        "drupal/datetime_extras": "^1.0@alpha",
-        "drupal/media_entity_browser": "^2.0",
-        "drupal/bootstrap_simple_carousel": "^1.2",
-        "drupal/block_field": "^1.0@alpha",
-        "drupal/convert_bundles": "^1.0@alpha"
+        "drush/drush": "^9.7",
+        "egulias/email-validator": "^2.0",
+        "platformsh/config-reader": "^2.2",
+        "vlucas/phpdotenv": "^2.4",
+        "webflo/drupal-core-require-dev": "^8.7",
+        "webflo/drupal-finder": "^1.0.0",
+        "webmozart/path-util": "^2.3",
+        "wikimedia/composer-merge-plugin": "^1.4",
+        "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "require-dev": {
-        "webflo/drupal-core-require-dev": "8.6.17"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -192,6 +193,7 @@
         },
         "patches": {
             "drupal/core": {
+                "IPU: Entity load null assert breaks paragraph add ajax See issue 3035980": "web/patches/ipu_entity_load_null_assert-3035980.patch",
                 "Ignore width height on untranslatable field": "https://www.drupal.org/files/issues/2019-02-11/ignore_width_height_on_untranslatable_field_comparision_2941092_8.patch",
                 "Path alias filter by system path": "https://www.drupal.org/files/issues/2018-03-24/path_alias_filter_by-2418755-69.patch",
                 "Term route context": "https://www.drupal.org/files/issues/2019-04-12/term_route_context-2998826-31.patch"
