--- a/config/sync/core.entity_view_display.node.publication.highlight.yml
+++ b/config/sync/core.entity_view_display.node.publication.highlight.yml
@@ -28,7 +28,7 @@ third_party_settings:
     group_download:
       children: {  }
       parent_name: ''
-      weight: 18
+      weight: 20
       label: 'Download free copy'
       format_settings:
         formatter: collapsible
@@ -46,13 +46,11 @@ third_party_settings:
       region: hidden
     group_content:
       children:
-        - field_publication_type
-        - node_title
         - field_publication_date
         - body
         - node_link
-      parent_name: ''
-      weight: 1
+      parent_name: group_content_wrapper
+      weight: 3
       format_type: html_element
       format_settings:
         id: ''
@@ -65,6 +63,44 @@ third_party_settings:
         effect: none
         speed: fast
       label: Content
+      region: hidden
+    group_header:
+      children:
+        - field_publication_type
+        - node_title
+      parent_name: ''
+      weight: 0
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: group-header
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Header
+      region: hidden
+    group_content_wrapper:
+      children:
+        - field_media_image
+        - group_content
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: group-content-wrapper
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Content wrapper'
       region: hidden
   ds:
     layout:
@@ -88,6 +124,8 @@ third_party_settings:
             attributes: ''
     regions:
       main:
+        - group_header
+        - group_content_wrapper
         - field_media_image
         - group_content
         - field_publication_type
@@ -149,7 +187,7 @@ content:
     region: main
   field_media_image:
     type: responsive_image
-    weight: 0
+    weight: 2
     region: main
     label: hidden
     settings:
