--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -58,15 +58,16 @@ third_party_settings:
         - node_title
       left:
         - body
-        - field_sections
       right:
         - 'dynamic_block_field:node-menu_block'
         - field_media_image
         - field_caption
+      bottom:
+        - field_sections
     fields:
       'dynamic_block_field:node-menu_block':
         plugin_id: 'dynamic_block_field:node-menu_block'
-        weight: 3
+        weight: 2
         label: hidden
         formatter: default
         ft:
@@ -105,7 +106,7 @@ content:
     third_party_settings: {  }
     region: left
   field_caption:
-    weight: 5
+    weight: 4
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -113,7 +114,7 @@ content:
     region: right
   field_media_image:
     type: responsive_image
-    weight: 4
+    weight: 3
     region: right
     label: hidden
     settings:
@@ -122,13 +123,13 @@ content:
     third_party_settings: {  }
   field_sections:
     label: hidden
-    weight: 2
+    weight: 5
     type: entity_reference_revisions_entity_view
     settings:
       view_mode: full
       link: ''
     third_party_settings: {  }
-    region: left
+    region: bottom
 hidden:
   langcode: true
   links: true
