--- a/config/sync/views.view.committee_members.yml
+++ b/config/sync/views.view.committee_members.yml
@@ -7,11 +7,13 @@ dependencies:
     - field.storage.node.field_country_cm
     - field.storage.node.field_custom_date_range_text
     - field.storage.node.field_designation_cm
+    - field.storage.node.field_end_of_mandate
     - field.storage.node.field_photo_cm
     - node.type.committee_member
     - responsive_image.styles.narrow
   module:
     - address
+    - datetime
     - entityqueue
     - node
     - responsive_image
@@ -255,8 +257,8 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: langcode
-          type: address_default
+          click_sort_column: country_code
+          type: address_plain
           settings: {  }
           group_column: value
           group_columns: {  }
@@ -383,8 +385,73 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: null
-          settings: {  }
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_end_of_mandate:
+          id: field_end_of_mandate
+          table: node__field_end_of_mandate
+          field: field_end_of_mandate
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: datetime_default
+          settings:
+            timezone_override: ''
+            format_type: html_month
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -429,7 +496,7 @@ display:
             all: all
             committee_members_assembly_: committee_members_assembly_
           group: 1
-          exposed: true
+          exposed: false
           expose:
             operator_id: queue_op
             label: Queue
@@ -463,6 +530,46 @@ display:
           entity_type: entity_subqueue
           entity_field: queue
           plugin_id: bundle
+        langcode:
+          id: langcode
+          table: node_field_data
+          field: langcode
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_content***': '***LANGUAGE_language_content***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: langcode
+          plugin_id: language
       sorts:
         entityqueue_relationship:
           id: entityqueue_relationship
@@ -557,17 +664,19 @@ display:
         - 'config:field.storage.node.field_country_cm'
         - 'config:field.storage.node.field_custom_date_range_text'
         - 'config:field.storage.node.field_designation_cm'
+        - 'config:field.storage.node.field_end_of_mandate'
         - 'config:field.storage.node.field_photo_cm'
         - entity_field_info
         - views_data
   block_1:
     display_plugin: block
     id: block_1
-    display_title: Block
+    display_title: 'Block - With queue'
     position: 1
     display_options:
       display_extenders:
         metatag_display_extender: {  }
+      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
@@ -581,6 +690,101 @@ display:
         - 'config:field.storage.node.field_country_cm'
         - 'config:field.storage.node.field_custom_date_range_text'
         - 'config:field.storage.node.field_designation_cm'
+        - 'config:field.storage.node.field_end_of_mandate'
+        - 'config:field.storage.node.field_photo_cm'
+        - entity_field_info
+        - views_data
+  block_2:
+    display_plugin: block
+    id: block_2
+    display_title: 'Block - No queue'
+    position: 1
+    display_options:
+      display_extenders:
+        metatag_display_extender: {  }
+      display_description: ''
+      filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+          group: 1
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          value:
+            committee_member: committee_member
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+        langcode:
+          id: langcode
+          table: node_field_data
+          field: langcode
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_content***': '***LANGUAGE_language_content***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: langcode
+          plugin_id: language
+      defaults:
+        filters: false
+        filter_groups: false
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - url.query_args
+        - 'user.node_grants:view'
+      tags:
+        - 'config:entityqueue.entity_queue.committee_members_assembly_'
+        - 'config:field.storage.node.field_country_cm'
+        - 'config:field.storage.node.field_custom_date_range_text'
+        - 'config:field.storage.node.field_designation_cm'
+        - 'config:field.storage.node.field_end_of_mandate'
         - 'config:field.storage.node.field_photo_cm'
         - entity_field_info
         - views_data
