--- a/config/sync/ds.field.top_level_menu_item.yml
+++ b/config/sync/ds.field.top_level_menu_item.yml
@@ -1,21 +1,21 @@
-id: contextual_menu
-label: 'Contextual menu'
-ui_limit: "basic_page|default\r\nbasic_page|full\r\nsection_page|default\r\nsection_page|full\r\npage|default\r\npage|full"
+id: top_level_menu_item
+label: 'Top level menu item'
+ui_limit: "section_page|full\r\nsection_page|default\r\nbasic_page|full\r\nbasic_page|default\r\npage|full\r\npage|default"
 properties:
   block: 'menu_block:mega-menu'
-  use_block_title: true
+  use_block_title: false
   add_block_wrappers: true
   config:
     id: 'menu_block:mega-menu'
     label: ''
     provider: menu_block
     label_display: visible
-    level: 2
-    depth: 0
+    level: 1
+    depth: 1
     expand: 0
     parent: 'mega-menu:menu_link_content:7deea3a9-0284-4575-91a7-04bc620a83c0'
-    render_parent: true
-    suggestion: mega_menu
+    render_parent: false
+    suggestion: mega_menu_top_level
 type: block
 type_label: 'Block field'
 entities:
