--- a/config/sync/field.field.node.page.field_media_image.yml
+++ b/config/sync/field.field.node.page.field_media_image.yml
@@ -8,16 +8,34 @@ dependencies:
   module:
     - content_translation
     - custom_add_another
+    - filefield_paths
     - image
 third_party_settings:
-  custom_add_another:
-    custom_add_another: ''
-    custom_remove: ''
+  filefield_paths:
+    enabled: true
+    file_path:
+      value: ''
+      options:
+        slashes: false
+        pathauto: false
+        transliterate: false
+    redirect: false
+    retroactive_update: false
+    active_updating: false
+    file_name:
+      value: '[file:ffp-name-only-original].[file:ffp-extension-original]'
+      options:
+        slashes: false
+        pathauto: false
+        transliterate: false
   content_translation:
     translation_sync:
       alt: alt
       title: title
       file: '0'
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: node.page.field_media_image
 field_name: field_media_image
 entity_type: node
@@ -34,11 +52,16 @@ settings:
   max_filesize: ''
   max_resolution: ''
   min_resolution: ''
-  alt_field: false
-  title_field: false
-  default_image: '99'
-  alt_field_required: true
+  alt_field: true
+  alt_field_required: false
+  title_field: true
   title_field_required: false
+  default_image:
+    uuid: ''
+    alt: '9'
+    title: '9'
+    width: 9
+    height: 9
   handler: 'default:file'
   handler_settings: {  }
 field_type: image
