--- a/config/sync/core.entity_view_display.paragraph.carousel.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.carousel.default.yml
@@ -31,7 +31,7 @@ content:
       link: false
     third_party_settings:
       ds:
-        ds_limit: ''
+        ds_limit: '5'
         ft:
           id: default
           settings:
