--- a/config/sync/core.entity_view_display.node.basic_page.default.yml
+++ b/config/sync/core.entity_view_display.node.basic_page.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.basic_page.body
     - field.field.node.basic_page.field_caption
     - field.field.node.basic_page.field_contact_ipu
+    - field.field.node.basic_page.field_geopolitical_group
     - field.field.node.basic_page.field_media_image
     - field.field.node.basic_page.field_related_content
     - field.field.node.basic_page.field_related_documents
@@ -142,6 +143,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: right
+  field_geopolitical_group:
+    weight: 8
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_media_image:
     type: image
     weight: 4
