--- a/config/sync/core.entity_view_display.node.article.highlight.yml
+++ b/config/sync/core.entity_view_display.node.article.highlight.yml
@@ -21,6 +21,7 @@ dependencies:
     - ds
     - field_group
     - responsive_image
+    - smart_trim
     - user
 third_party_settings:
   field_group:
@@ -45,6 +46,7 @@ third_party_settings:
       children:
         - node_post_date
         - node_title
+        - body
         - node_link
       parent_name: ''
       weight: 2
@@ -85,9 +87,10 @@ third_party_settings:
       main:
         - field_article_type
         - field_media_image
-        - group_content
         - node_post_date
+        - group_content
         - node_title
+        - body
         - node_link
     fields:
       node_link:
@@ -122,6 +125,32 @@ targetEntityType: node
 bundle: article
 mode: highlight
 content:
+  body:
+    type: smart_trim
+    weight: 4
+    region: main
+    label: hidden
+    settings:
+      trim_length: 40
+      trim_type: words
+      trim_suffix: ''
+      wrap_class: trimmed
+      more_text: More
+      more_class: more-link
+      summary_handler: full
+      trim_options:
+        text: true
+        trim_zero: false
+      wrap_output: false
+      more_link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_article_type:
     type: entity_reference_label
     weight: 0
@@ -154,7 +183,6 @@ content:
             lb-col: false
             classes: {  }
 hidden:
-  body: true
   field_caption: true
   field_contact_ipu: true
   field_country: true
