--- a/config/sync/core.base_field_override.paragraph.highlights.status.yml
+++ b/config/sync/core.base_field_override.paragraph.highlights.status.yml
@@ -1,17 +1,17 @@
-uuid: d8819f39-f48d-4309-aab7-2ec984fb362e
+uuid: d565f951-cebf-4c8f-8998-433b210b4ce6
 langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.basic
-id: block_content.basic.status
+    - paragraphs.paragraphs_type.highlights
+id: paragraph.highlights.status
 field_name: status
-entity_type: block_content
-bundle: basic
+entity_type: paragraph
+bundle: highlights
 label: Published
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: 1
