--- a/config/sync/field.field.paragraph.carousel.field_section_node.yml
+++ b/config/sync/field.field.paragraph.carousel.field_section_node.yml
@@ -25,7 +25,7 @@ bundle: carousel
 label: 'Content item'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
