--- a/config/sync/core.entity_form_display.node.document.default.yml
+++ b/config/sync/core.entity_form_display.node.document.default.yml
@@ -11,11 +11,14 @@ dependencies:
     - field.field.node.document.field_ipu_structure
     - field.field.node.document.field_media_image
     - field.field.node.document.field_theme
+    - image.style.thumbnail
     - node.type.document
   module:
+    - chosen_field
     - field_group
     - field_layout
     - file
+    - image
     - layout_discovery
     - link
     - path
@@ -28,14 +31,13 @@ third_party_settings:
     group_taxonomy:
       children:
         - field_document_type
-        - field_ipu_structure
         - field_theme
         - field_country
+        - field_ipu_structure
       parent_name: ''
       weight: 1
       label: Taxonomy
       format_settings:
-        label: Taxonomy
         formatter: open
         required_fields: true
         id: ''
@@ -46,13 +48,10 @@ third_party_settings:
     group_basic_info:
       children:
         - body
-        - title_field
-        - language
       parent_name: ''
       weight: 0
       label: 'Basic information'
       format_settings:
-        label: 'Basic information'
         formatter: open
         required_fields: true
         id: ''
@@ -68,7 +67,6 @@ third_party_settings:
       weight: 3
       label: Document
       format_settings:
-        label: Document
         formatter: open
         required_fields: true
         id: ''
@@ -83,7 +81,6 @@ third_party_settings:
       weight: 2
       label: Media
       format_settings:
-        label: Media
         formatter: open
         required_fields: true
         id: ''
@@ -113,7 +110,7 @@ content:
     third_party_settings: {  }
   field_country:
     weight: 7
-    type: options_select
+    type: chosen_select
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -126,7 +123,7 @@ content:
     region: content
   field_document_type:
     weight: 5
-    type: options_select
+    type: chosen_select
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -140,20 +137,21 @@ content:
     region: content
   field_ipu_structure:
     weight: 8
-    type: options_select
+    type: chosen_select
     settings: {  }
     third_party_settings: {  }
     region: content
   field_media_image:
     weight: 4
-    type: file_generic
+    type: image_image
     settings:
+      preview_image_style: thumbnail
       progress_indicator: throbber
     third_party_settings: {  }
     region: content
   field_theme:
     weight: 6
-    type: options_select
+    type: chosen_select
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -201,9 +199,9 @@ content:
     third_party_settings: {  }
   translation:
     weight: 10
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   uid:
     type: entity_reference_autocomplete
     weight: 5
@@ -215,7 +213,7 @@ content:
     third_party_settings: {  }
   url_redirects:
     weight: 50
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
