--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -13,14 +13,16 @@ dependencies:
     - field.field.node.event.field_location
     - field.field.node.event.field_media_image
     - field.field.node.event.field_theme
+    - image.style.thumbnail
     - node.type.event
   module:
     - address
+    - chosen_field
     - datetime
-    - entity_browser
     - field_group
     - field_layout
     - file
+    - image
     - layout_discovery
     - link
     - path
@@ -40,7 +42,6 @@ third_party_settings:
       weight: 2
       label: Taxonomy
       format_settings:
-        label: Taxonomy
         formatter: open
         required_fields: true
         id: ''
@@ -56,7 +57,6 @@ third_party_settings:
       weight: 1
       label: 'Basic information'
       format_settings:
-        label: 'Basic information'
         formatter: open
         required_fields: true
         id: ''
@@ -71,7 +71,6 @@ third_party_settings:
       weight: 7
       label: Tabs
       format_settings:
-        label: Tabs
         id: ''
         classes: 'group-tabs field-group-htabs node-tabs'
         direction: horizontal
@@ -111,7 +110,7 @@ content:
     third_party_settings: {  }
   field_country:
     weight: 10
-    type: options_select
+    type: chosen_select
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -130,7 +129,7 @@ content:
     region: content
   field_event_type:
     weight: 8
-    type: options_select
+    type: chosen_select
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -144,7 +143,7 @@ content:
     region: content
   field_ipu_structure:
     weight: 11
-    type: options_select
+    type: chosen_select
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -156,21 +155,15 @@ content:
     region: content
   field_media_image:
     weight: 9
-    type: entity_browser_file
+    type: image_image
     settings:
-      entity_browser: null
-      open: false
-      field_widget_edit: true
-      field_widget_remove: true
-      field_widget_replace: false
-      selection_mode: selection_append
-      view_mode: default
       preview_image_style: thumbnail
+      progress_indicator: throbber
     third_party_settings: {  }
     region: content
   field_theme:
     weight: 9
-    type: options_select
+    type: chosen_select
     settings: {  }
     third_party_settings: {  }
     region: content
