--- a/config/sync/field.field.node.document.field_document_type.yml
+++ b/config/sync/field.field.node.document.field_document_type.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_document_type
     - node.type.document
+    - taxonomy.vocabulary.documents
   module:
     - custom_add_another
 third_party_settings:
@@ -23,5 +24,12 @@ default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
-  handler_settings: {  }
+  handler_settings:
+    target_bundles:
+      documents: documents
+    sort:
+      field: name
+      direction: asc
+    auto_create: false
+    auto_create_bundle: ''
 field_type: entity_reference
