--- a/config/sync/field.field.node.publication.field_ipu_structure.yml
+++ b/config/sync/field.field.node.publication.field_ipu_structure.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_ipu_structure
     - node.type.publication
+    - taxonomy.vocabulary.ipu_structure
   module:
     - custom_add_another
 third_party_settings:
@@ -23,5 +24,12 @@ default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
-  handler_settings: {  }
+  handler_settings:
+    target_bundles:
+      ipu_structure: ipu_structure
+    sort:
+      field: name
+      direction: asc
+    auto_create: false
+    auto_create_bundle: ''
 field_type: entity_reference
