--- a/config/sync/block.block.mainmenu.yml
+++ b/config/sync/block.block.mainmenu.yml
@@ -27,5 +27,6 @@ settings:
   depth: 1
   expand: 0
   parent: 'main:menu_link_content:4757d068-316e-4037-9af9-5ab9185972d7'
+  render_parent: false
   suggestion: main
 visibility: {  }
