--- a/config/sync/block.block.megamenu_3.yml
+++ b/config/sync/block.block.megamenu_3.yml
@@ -23,5 +23,6 @@ settings:
   depth: 1
   expand: 0
   parent: 'mega-menu:menu_link_content:7deea3a9-0284-4575-91a7-04bc620a83c0'
+  render_parent: false
   suggestion: mega_menu
 visibility: {  }
