--- a/config/sync/core.entity_view_display.node.document.default.yml
+++ b/config/sync/core.entity_view_display.node.document.default.yml
@@ -11,13 +11,62 @@ dependencies:
     - field.field.node.document.field_ipu_structure
     - field.field.node.document.field_media_image
     - field.field.node.document.field_theme
+    - image.style.medium
     - node.type.document
   module:
-    - file
+    - ds
+    - file_entity
     - image
     - link
     - text
     - user
+third_party_settings:
+  ds:
+    layout:
+      id: bs_2col
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        layout:
+          wrapper: div
+          classes:
+            row: row
+          add_layout_class: 1
+          attributes: class|container
+        regions:
+          left:
+            wrapper: div
+            classes:
+              col-sm-8: col-sm-8
+            add_region_classes: 1
+            attributes: ''
+          right:
+            wrapper: div
+            classes:
+              col-sm-4: col-sm-4
+            add_region_classes: 1
+            attributes: ''
+    regions:
+      left:
+        - node_title
+        - field_document_type
+        - field_media_image
+        - body
+        - field_external_link
+        - links
+      right:
+        - field_document_file
+        - langcode
+        - field_country
+        - field_ipu_structure
+        - field_theme
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
 id: node.document.default
 targetEntityType: node
 bundle: document
@@ -25,22 +74,54 @@ mode: default
 content:
   body:
     label: hidden
-    weight: 1
+    weight: 3
     type: text_default
     settings: {  }
     third_party_settings: {  }
-    region: content
-  field_document_file:
-    label: above
-    weight: 4
-    type: file_default
+    region: left
+  field_country:
+    type: entity_reference_label
+    weight: 8
+    region: right
+    label: inline
     settings:
-      use_description_as_link_text: true
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_document_file:
+    label: inline
+    weight: 6
+    type: file_download_link
+    settings:
+      access_message: 'You don''t have access to download this file.'
+      text: 'Download [file:name]'
     third_party_settings: {  }
-    region: content
+    region: right
+  field_document_type:
+    type: entity_reference_label
+    weight: 1
+    region: left
+    label: inline
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_external_link:
-    label: above
-    weight: 9
+    label: inline
+    weight: 4
     type: link
     settings:
       trim_length: 80
@@ -49,24 +130,67 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    region: content
+    region: left
+  field_ipu_structure:
+    type: entity_reference_label
+    weight: 9
+    region: right
+    label: inline
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_media_image:
-    label: above
-    weight: 7
+    label: hidden
+    weight: 2
     type: image
     settings:
-      image_style: ''
-      image_link: ''
+      image_style: medium
+      image_link: file
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    region: left
+  field_theme:
+    type: entity_reference_label
+    weight: 10
+    region: right
+    label: inline
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  langcode:
+    type: language
+    weight: 7
+    region: right
+    label: inline
+    settings:
+      link_to_entity: false
+      native_language: false
     third_party_settings: {  }
-    region: content
   links:
-    weight: 100
+    weight: 5
+    region: left
     settings: {  }
     third_party_settings: {  }
-    region: content
-hidden:
-  field_country: true
-  field_document_type: true
-  field_ipu_structure: true
-  field_theme: true
-  langcode: true
+hidden: {  }
