--- a/config/sync/core.entity_view_display.node.ipu_event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.ipu_event.teaser.yml
@@ -31,6 +31,7 @@ dependencies:
   module:
     - address
     - datetime
+    - datetime_range
     - ds
     - taxonomy
     - user
@@ -59,6 +60,7 @@ third_party_settings:
       main:
         - field_event_type
         - node_title
+        - field_ipu_event_dates
         - field_location
         - field_event_computed_date
     fields:
@@ -74,7 +76,7 @@ mode: teaser
 content:
   field_event_computed_date:
     type: datetime_plain
-    weight: 3
+    weight: 4
     region: main
     label: above
     settings:
@@ -87,9 +89,18 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
+  field_ipu_event_dates:
+    type: daterange_plain
+    weight: 2
+    region: main
+    label: hidden
+    settings:
+      separator: '-'
+      timezone_override: ''
+    third_party_settings: {  }
   field_location:
     type: address_default
-    weight: 2
+    weight: 3
     region: main
     label: above
     settings: {  }
@@ -105,7 +116,6 @@ hidden:
   field_event_theme: true
   field_hide_documents_menu: true
   field_hide_programs_menu: true
-  field_ipu_event_dates: true
   field_ipu_event_right_menu: true
   field_ipu_event_section: true
   field_ipu_event_session_type: true
