Add new structure for paragraph member, linking to person (committee member) and with role and mandate. Add para to basic page in field composition/committee members

--- a/config/sync/core.base_field_override.node.committee_member.title.yml
+++ b/config/sync/core.base_field_override.node.committee_member.title.yml
@@ -8,7 +8,7 @@ id: node.committee_member.title
 field_name: title
 entity_type: node
 bundle: committee_member
-label: Title
+label: Name
 description: ''
 required: false
 translatable: true
