--- a/config/sync/core.entity_view_display.node.basic_page.default.yml
+++ b/config/sync/core.entity_view_display.node.basic_page.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.basic_page.body
     - field.field.node.basic_page.field_caption
+    - field.field.node.basic_page.field_committee_members
     - field.field.node.basic_page.field_contact_ipu
     - field.field.node.basic_page.field_geopolitical_group
     - field.field.node.basic_page.field_media_image
@@ -27,7 +28,7 @@ third_party_settings:
         - field_media_image
         - field_caption
       parent_name: ''
-      weight: 5
+      weight: 6
       label: image
       format_settings:
         element: div
@@ -83,11 +84,12 @@ third_party_settings:
         - node_title
       left:
         - body
+        - field_committee_members
         - field_sections
       right:
         - 'dynamic_block_field:node-top_level_menu_item'
-        - 'dynamic_block_field:node-menu_block'
         - field_media_image
+        - 'dynamic_block_field:node-menu_block'
         - group_image
         - field_caption
         - field_related_content
@@ -95,7 +97,7 @@ third_party_settings:
     fields:
       'dynamic_block_field:node-menu_block':
         plugin_id: 'dynamic_block_field:node-menu_block'
-        weight: 4
+        weight: 5
         label: hidden
         formatter: default
         ft:
@@ -106,7 +108,7 @@ third_party_settings:
             classes: {  }
       'dynamic_block_field:node-top_level_menu_item':
         plugin_id: 'dynamic_block_field:node-top_level_menu_item'
-        weight: 3
+        weight: 4
         label: hidden
         formatter: default
       node_title:
@@ -143,14 +145,23 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: right
-  field_geopolitical_group:
-    weight: 8
+  field_committee_members:
+    type: entity_reference_revisions_entity_view
+    weight: 2
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
+      view_mode: default
+      link: ''
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: Composition
+            lb-col: false
+            classes: {  }
+    region: left
   field_media_image:
     type: image
     weight: 4
@@ -162,7 +173,7 @@ content:
     third_party_settings: {  }
   field_related_content:
     label: above
-    weight: 6
+    weight: 7
     type: entity_reference_revisions_entity_view
     settings:
       view_mode: full
@@ -171,7 +182,7 @@ content:
     region: right
   field_related_documents:
     type: entity_reference_revisions_entity_view
-    weight: 7
+    weight: 8
     region: right
     label: above
     settings:
@@ -180,7 +191,7 @@ content:
     third_party_settings: {  }
   field_sections:
     label: hidden
-    weight: 2
+    weight: 3
     type: entity_reference_revisions_entity_view
     settings:
       view_mode: full
@@ -189,5 +200,6 @@ content:
     region: left
 hidden:
   field_contact_ipu: true
+  field_geopolitical_group: true
   langcode: true
   links: true
